--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/react-grid-layout": "^1.3.2",
     "dayjs": "^1.11.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-grid-layout": "^1.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
