--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@types/react-dom": "^18.0.3",
     "@types/react-grid-layout": "^1.3.2",
     "dayjs": "^1.11.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-grid-layout": "^1.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "@types/yup": "^0.29.14"
   }
 }
