--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task_manager",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
@@ -23,6 +23,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
