--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,9 @@ server {
         server_name 0.0.0.0;
 
         location / {
+            index index.html
+            try_files $uri $uri/ /index.html
+
             proxy_pass http://localhost:8080;
 
             proxy_http_version 1.1;
