рефакторинг и натройка манифеста, логотип, фавикон

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "White Planner",
+  "name": "White Planner - Легкий и удобный календарь для планирования личных и рабочих дел, встреч, событий, мероприятий.",
+  "description": "White Planner - это сервис, позволяющий легко и удобно планировать дела, мероприятия, встречи. Отслеживайте прогресс, следите за выполнением, приглашайте друзей к своим событиям, планируйте так, как удобно именно вам.",
+  "lang": "ru",
   "icons": [
     {
       "src": "favicon.ico",
