--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-grid-layout": "^1.3.2",
+    "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.1",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
